fix text alignment to be left instead of center

--- a/myapp/static/style/login.css
+++ b/myapp/static/style/login.css
@@ -7,7 +7,6 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  text-align: center;
   min-height: 100vh;
 }
 
